--- a/Leafelt/old/SchaGaDu.html
+++ b/Leafelt/old/SchaGaDu.html
@@ -7,6 +7,19 @@
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
         integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
         crossorigin=""/>
+		<style>
+			/* Stile per rendere il corpo e l'HTML a piena altezza */
+			html, body {
+				margin: 0;
+				padding: 0;
+				height: 100%;
+			}
+			/* Stile per il contenitore della mappa */
+			#myMap {
+				width: 100%;
+				height: 100%;
+			}
+    	</style>
         <!-- For awesome markers -->
         <!-- <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" rel="stylesheet">  -->
         <!-- End of awesome markers -->
